# anomally_intelligence

./: .gitattributes  .gitignore  CHANGELOG.md  MAINTAINERS.md  PROJECT_STATUS.md  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  provenance-concern.md
.github/workflows/: ci.yml  deploy-pages.yml
docs/: legal-compliance.md
docs/adr/: 0000-long-term-vision.md  0001-epistemic-category-separation.md  0002-evidence-first-architecture.md  0003-local-first-reproducible.md  0004-phased-architecture.md  0005-source-and-provenance-model.md  0006-formal-evidence-model.md  0007-claim-model.md  0008-competing-hypotheses-model.md  0009-uncertainty-and-confidence-framework.md  0010-case-lifecycle.md  0011-knowledge-graph.md  0012-timeline-engine.md  0013-geospatial-engine.md  0014-osint-strategy.md  0015-storage-strategy.md  0016-content-addressed-versioning.md  0017-api-design.md  0018-search-strategy.md  0019-security-model.md  0020-ethics-framework.md  0021-no-llm-fabrication.md  0022-apache-license.md  0023-scope-reduction.md  0024-epistemic-honesty-amendment.md  0025-neutrality-clarification.md  0026-sustainable-stewardship.md  0027-graceful-archive-policy.md  0028-license-reassessment.md  0029-runtime-language-decision.md  0030-repository-layout.md  0031-testing-strategy.md  0032-authentication-assessment-engine.md  0033-evidence-graph-v1.md  0034-impact-analysis-engine.md  0035-context-assembly-layer.md  0036-investigation-workspace.md  0037-investigation-timeline-engine.md  0038-investigation-snapshot-engine.md  0039-investigation-diff-engine.md  (+11 more)
docs/demo/: README.md  demo-report.html  finalize-bitcoin-anchor.sh  regenerate.sh
docs/demo/demo_archive/: manifest.json
docs/ethics-procedures/: classified-material.md
docs/phase-1/: command-specification.md  demo-evidence-selection.md
docs/reviews/: adr_red_team_review.md  phase-1-review.md  red_team_response.md
docs/schema-migrations/: README.md
docs/schemas/: README.md  audit-entry.v1.schema.json  capture-certificate.v1.schema.json  inference-proof.v1.schema.json  key-declaration.v1.schema.json  transparency-manifest.v1.schema.json  witness-attestation.v1.schema.json
scripts/: README.md  fetch_demo_fixture.py
src/aip/: __init__.py  __main__.py  _version.py  archive.py  errors.py
src/aip/analysis/: __init__.py  authentication.py
src/aip/api/: __init__.py  app.py  deps.py  server.py
src/aip/archive_compare/: __init__.py  comparator.py
src/aip/attestation/: __init__.py  models.py  signer.py
src/aip/audit/: __init__.py  archive_state.py  log.py  verify.py
src/aip/c2pa/: __init__.py  extractor.py  models.py  verifier.py  x509_verifier.py
src/aip/capture/: __init__.py  models.py  signer.py  store.py
src/aip/cli/: __init__.py  __main__.py  archive_commands.py  assessment_commands.py  attestation_commands.py  capture_commands.py  context_commands.py  diff_commands.py  evidence_commands.py  graph_commands.py  impact_commands.py  justification_commands.py  main.py  notarize_commands.py  snapshot_commands.py  timeline_commands.py  transparency_commands.py  verify_commands.py  workspace_commands.py
src/aip/context/: __init__.py  assembler.py  models.py
src/aip/core/: __init__.py  evidence.py  hashing.py  provenance.py  source.py
src/aip/diff/: __init__.py  differ.py  models.py
src/aip/graph/: __init__.py  builder.py  models.py  query.py
src/aip/impact/: __init__.py  analyzer.py  models.py
src/aip/integrity/: __init__.py  models.py  verify.py
src/aip/justification/: __init__.py  builder.py  differ.py  models.py
src/aip/notarize/: __init__.py  header_fetcher.py  store.py  submitter.py  verifier.py
src/aip/report/: __init__.py  builder.py
src/aip/snapshot/: __init__.py  builder.py  models.py
src/aip/storage/: __init__.py  atomic_io.py  layout.py  manifest.py  tables.py
src/aip/timeline/: __init__.py  builder.py  models.py
src/aip/transparency/: __init__.py  exporter.py  footprint_verifier.py  key_declaration.py  models.py  signer.py  state.py  store.py
src/aip/workspace/: __init__.py  builder.py  models.py
tests/: conftest.py
tests/data/: README.md
tests/integration/: test_demo_pipeline.py
tests/reproducibility/: test_audit_chain.py  test_jcs.py  test_manifest_hash.py
tests/unit/: test_archive.py  test_archive_manifest_tampering.py  test_main_module.py  test_paso_0_smoke.py
tests/unit/analysis/: test_assess_authentication_archive.py  test_authentication.py
tests/unit/api/: test_transparency_key_declaration_route.py
tests/unit/archive_compare/: test_comparator.py
tests/unit/attestation/: test_attestation_models.py  test_signer.py
tests/unit/audit/: test_archive_state.py  test_derived_actions.py  test_log.py  test_verify.py
tests/unit/c2pa/: test_extractor.py  test_verifier.py  test_verifier_with_trust_list.py  test_x509_verifier.py
tests/unit/cli/: test_archive_snapshot_command.py  test_assessment_commands.py  test_attestation_commands.py  test_context_commands.py  test_declare_key_commands.py  test_diff_archives_command.py  test_graph_commands.py  test_impact_commands.py  test_justification_commands.py  test_main.py  test_timeline_snapshot_diff_commands.py  test_verify_commands.py  test_workspace_commands.py
tests/unit/context/: test_assembler.py  test_context_models.py
tests/unit/core/: test_evidence.py  test_hashing.py  test_provenance.py  test_source.py
tests/unit/diff/: test_diff_engine.py
tests/unit/graph/: test_builder.py  test_models.py  test_query.py
tests/unit/impact/: test_impact_analyzer.py  test_impact_models.py
tests/unit/integrity/: test_e16_reconciliation.py  test_integrity.py
tests/unit/justification/: test_justification_builder.py  test_justification_models.py
tests/unit/notarize/: test_header_fetcher.py
tests/unit/properties/: test_audit_properties.py  test_hashing_properties.py
tests/unit/report/: test_builder_inference_rules.py  (+1 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+71 files in other folders)
