[project]
name = "aip"
version = "0.0.1"
description = "Anomaly Intelligence Platform — evidence-first archive with bit-by-bit traceability."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "AIP Contributors" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Modelo de datos con validación (ADR-0006, ADR-0007 diferido, ADR-0029).
    "pydantic >=2.7,<3",
    # Almacenamiento columnar canónico (ADR-0015).
    "pyarrow >=15,<20",
    # IANA tz database. Requerida en Windows porque Python no la trae nativa;
    # se usa para timestamps UTC con tz explícita (ADR-0012 diferido pero los
    # timestamps del audit log y de Evidence.ingested_at son tz-aware desde V1).
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest >=8,<10",
    "pytest-cov >=5",
    "ruff >=0.4",
    "mypy >=1.10",
]

[project.scripts]
aip = "aip.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aip"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "PL"]
ignore = ["PLR0913", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]  # magic numbers en tests son canónicos pinned

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "reproducibility: tests de reproducibilidad bit a bit (valores canónicos pinned)",
    "integration: tests de pipeline end-to-end",
    "requires_fixture: requiere el PDF fixture de Pre-F1.C (skip hasta que pinned values estén)",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
