[project]
name = "aip"
version = "0.3.0"
description = "Anomaly Intelligence Platform — evidence-first archive with bit-by-bit traceability."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "AIP Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Modelo de datos con validación (ADR-0006, ADR-0007 diferido, ADR-0029).
    "pydantic >=2.7,<3",
    # Almacenamiento columnar canónico (ADR-0015).
    "pyarrow >=15,<20",
    # IANA tz database. Requerida en Windows porque Python no la trae nativa;
    # se usa para timestamps UTC con tz explícita (ADR-0012 diferido pero los
    # timestamps del audit log y de Evidence.ingested_at son tz-aware desde V1).
    "tzdata; sys_platform == 'win32'",
    # Atestación criptográfica (ADR-0041). Provee ed25519 sign/verify a
    # través de wheels pre-construidos en Linux/macOS/Windows. Audit-friendly,
    # mantenida por la PSF y la Open Tech Fund. Rolling-our-own ed25519
    # es un anti-patrón de seguridad — la dep es load-bearing para la
    # garantía de atestación criptográfica.
    "cryptography >=42,<50",
]

[project.optional-dependencies]
dev = [
    "pytest >=8,<10",
    "pytest-cov >=5",
    "ruff >=0.4",
    "mypy >=1.10",
    # Property-based testing sobre invariantes de hashing y audit chain
    # (ADR-0031 §opcional; sin cambio de semántica del código de producción).
    "hypothesis >=6.100,<7",
    # JSON Schema 2020-12 validator (tests only). Used by
    # tests/unit/schemas/ to assert fixtures conform to the schemas in
    # docs/schemas/ — protects the public interop surface from drift
    # vs the canonical Python implementation. NOT a production dep.
    "jsonschema >=4.20,<5",
]
web = [
    # HTTP API layer (FastAPI + ASGI server).
    "fastapi >=0.110,<1",
    "uvicorn[standard] >=0.29",
    # Requerido por FastAPI para aceptar multipart/form-data (uploads de imagen).
    "python-multipart >=0.0.9",
]
c2pa = [
    # ADR-0048: JUMBF auto-extraction from JPEG/PNG/MP4/HEIC/AVIF/DNG/PDF.
    # Native dep (Rust binding); we use it strictly as a parser, never as
    # a trust authority — X.509 verification stays in ADR-0047.
    "c2pa-python >=0.30,<1",
]

[project.scripts]
aip = "aip.cli.main:main"
aip-web = "aip.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aip"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "PL"]
ignore = ["PLR0913", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]  # magic numbers en tests son canónicos pinned

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "reproducibility: tests de reproducibilidad bit a bit (valores canónicos pinned)",
    "integration: tests de pipeline end-to-end",
    "requires_fixture: requiere el PDF fixture de Pre-F1.C (skip hasta que pinned values estén)",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/aip", "tests"]
# ``mypy_path = "src"`` permite que ``aip.*`` sea el namespace canónico
# importable bajo strict.
# ``explicit_package_bases = true`` se requiere porque ``tests/`` no tiene
# ``__init__.py`` (mantenemos namespace plano para pytest). Sin esta opción
# mypy ve cada test como módulo top-level (``test_archive``, ``test_main``)
# en lugar de ``tests.unit.test_archive`` — y el override ``[[overrides]]
# module = ["tests.*"]`` que aparece más abajo no aplicaría, dejando los
# tests bajo strict completo. Cambiar uno sin el otro rompe el contrato.
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
# pyarrow no expone marker py.typed (ADR-0024 §6.1: lo tratamos como punto
# único de falla declarado). Ignoramos el missing-imports localmente.
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# opentimestamps tampoco expone py.typed. Mismo tratamiento que pyarrow:
# punto único de falla declarado. Usado solo desde la capa de notarización.
module = ["opentimestamps", "opentimestamps.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# jsonschema (dev dep) no trae stubs nativos. types-jsonschema existe pero
# añadirlo doblaría la superficie sin beneficio: el módulo se usa solo en
# tests/unit/schemas, donde los tests ya tienen overrides relajados.
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Tests no exigen firmas estrictas en helpers internos (ADR-0031 §G3 aplica
# a la API pública, no a fixtures locales). Además: los tests que verifican
# rechazos de tipo pasan inputs malos a propósito, lo que produce errores
# `arg-type`/`dict-item`/`index` legítimos del test pero no del código.
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
warn_return_any = false
disable_error_code = ["arg-type", "dict-item", "index", "call-overload"]
